# shiny-hunter

./: .envrc.macos  .gitignore  Cargo.toml  Taskfile.yml
.cargo/: config.toml
crates/broadcast-listener/: Cargo.toml
crates/broadcast-listener/src/: main.rs
crates/pico-timer/: Cargo.toml  build.rs
crates/pico-timer/.cargo/: config.toml
crates/pico-timer/src/: main.rs  switch_descriptor.rs
crates/shiny-watch/: Cargo.toml
crates/shiny-watch/src/app/: app.rs  color.rs  mod.rs  opts.rs  presets.rs  state.rs
scripts/: enumerate_devices.py
src/: cli.rs  enumdev.rs  main.rs  presets.rs
src/app/: app.rs  mod.rs  opts.rs  presets.rs  state.rs
