[package]
name = "pico-timer"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true }
panic-halt = { workspace = true }
rp2040-boot2 = { workspace = true }
rp2040-hal = { workspace = true, features = ["critical-section-impl"] }
